--- a/_data/registration.yml
+++ b/_data/registration.yml
@@ -3,7 +3,7 @@ description:
   paragraphs:
     - paragraph:
         # - line: 'Registrations are yet to open. Stay tuned for updates!'
-        - line: 'Registrations will be open from July 21<sup>st</sup> at 15:00, GTM+2.'
+        - line: 'Registrations will be open from July 21<sup>st</sup> at 9:00, GTM+2.'
         # - line: 'Registrations are closed.'
         # - line: "Registrations are yet to open. Stay tuned for updates!"
     - paragraph:
@@ -20,8 +20,8 @@ sections:
       - text: '50 places are available, 40 of them divided in equal parts between jDPG and AISF members. The remaining places are for local students. '
         #- text: "<b>Note</b>: Participation fee is subject to change and will be updated as soon as possible."
         subpoints:
-          - text: 'The selected candidates will have to cover a participation fee of 80€.'
-          - text: 'Students from University of Trieste have to pay a fee of 40€ (no accomodation included).'
+          - text: 'The selected candidates will have to cover a participation fee of <b>80€</b>.'
+          - text: 'Students from University of Trieste have to pay a fee of <b>40€</b> (no accomodation included).'
         #  - text: "The final   fee might be reduced thanks to some sponsor, but can't be raised. We'll let you know the final price before the event starts."
       - text: 'Such fee will cover:'
         subpoints:
@@ -38,7 +38,7 @@ sections:
           - text: 'insurance;'
           - text: "everything else not included in: 'such fee will cover'."
       # - text: "(?) Preference will be given to students presenting abstracts for a talk. If you want to present a talk <a href='https://ai-sf.it/iscrizione/'>click here</a> for submit your abstract."
-      - text: "The selection criteria are presented here.<br> <a class='chip custom1 white-text' href='../files/Selection_Criteria_GIPE25.pdf' style='font-size: 14px; float: right;'> Selection Criteria </a>"
+      - text: "The selection criteria are presented here.<br> <a class='chip custom1 white-text' href='../files/Selection_Criteria_GIPE25.pdf' style='font-size: 14px; float: right; margin-top:0.5rem'> Selection Criteria </a>"
       - text: 'A short letter of motivation is also required and may be used to allocate places.'
       - text: 'Please note that unfortunately we are not able to provide scholarships and/or bursaries for any students at this time.'
 
@@ -48,7 +48,7 @@ sections:
       - text: 'All personal data will be handled confidentially and in compliance with the European (GDPR EU 2016/679) and Italian (Art. 13 D. Lgs. 196/2003) data and privacy protection laws.'
       - text: 'Only students enrolled in a university or similar institution on a physics or physics-related course, as well as up to twelve months after receiving a degree from a university are able to participate in this event. You confirm that you will be at least 18 years of age by July 28<sup>th</sup> 2025.'
       - text: 'You acknowledge and agree that the Organizing Committee, the Italian Association of Physics Students (AISF), the International Association of Physics Students (IAPS), and the hosts of the event have no responsibility whatsoever for injuries, losses, or damages of any kind that result from your participation at the German Italian Physics Exchange 2025.'
-      - text: "You accept the IAPS Code of Conduct.<br> <a class='chip custom1 white-text' href='../files/IAPS_Code_of_Conduct.pdf' style='font-size: 14px; float: right;'> IAPS Code of Conduct </a>"
+      - text: "You accept the IAPS Code of Conduct.<br> <a class='chip custom1 white-text' href='../files/IAPS_Code_of_Conduct.pdf' style='font-size: 14px; float: right; margin-top:0.5rem'> IAPS Code of Conduct </a>"
       - text: 'By participating in the event you agree to be filmed, photographed, and otherwise recorded during the conference and hereby expressly grant the organizing committee, AISF and IAPS the right to use your picture, movie, or any other form of media publication in contexts such as the internet, social media, brochures, posters, informative and advertising materials. You also confirm that the information contained in this application is true and correct.'
       # - text: "(?) You accept the Information Notice on the Processing of Personal Data.<br> <a class='chip custom1 white-text' href='../files/Liberatoria_TIQIT_partecipanti_EN.pdf' style='font-size: 14px; float: right;'> Information Notice </a>"
       - text: 'You accept that either the Organizing Committee, or the Italian Association of Physics Students (AISF), the International Association of Physics Students (IAPS), the hosts of the event cannot be made responsible for the content of any talk, poster, workshop, excursion or similar activity.'
@@ -58,7 +58,7 @@ sections:
   - name: 'Deadlines'
     info: ''
     points:
-      - text: 'The round of registration opens on July 21<sup>st</sup> at 15:00, GTM+2' #and closes on August 10<sup>th</sup> at 23:59, GTM+1.'
+      - text: 'The round of registration opens on July 21<sup>st</sup> at 9:00, GTM+2' #and closes on August 10<sup>th</sup> at 23:59, GTM+1.'
       # - text: 'Registrations are yet to open. Stay tuned for updates!'
       - text: 'Once the registration is closed, the organizing committee will select the participants follpwing the selection criteria presented above.'
       - text: 'Selected participants will be notified within a few days from the registration closing, then the event fee will have to be paid within 7 days to confirm the participation.'
