aggiunti tutti gli enti sul sito

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -226,5 +226,5 @@ physicist Paolo Budinich."
         name: "Collegio Universitario Luciano Fonda (Via Fabio Severo, 40)"
         url: "/facilities/#fonda"
       substeps:
-        - title: "10:00-12:30 Round table with students and professors"
-        - title: "12:30-13:00 Closing ceremony"
+        - title: "10:00-12:30 Poster session with some of our sponsors;"
+        - title: "12:30-13:00 Closing ceremony."
