--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -14,6 +14,9 @@ cards:
       - title: 'Italian Physics Society'
         site: 'https://en.sif.it/'
         img: 'img/patrocini/SIF/sif_logo.png'
+      - title: 'Consolato Generale di Germania'
+        site:  'https://italien.diplo.de/it-it/vertretungen/generalkonsulat'
+        img: 'img/patrocini/consolato/LOGO_GK_ITA.jpg'
 
 
   - name: 'With the support of:'
@@ -38,6 +41,12 @@ cards:
       - title: 'International School for Advanced Studies'
         site: 'https://www.sissa.it/'
         img: 'img/partners/SISSA/logo_sissa.jpg'
+      - title: 'Fondazione CRTrieste'
+        site: 'https://www.fondazionecrtrieste.it/'
+        img: 'img/partners/CRTrieste/crtrieste_logo.png'
+      - title: 'Istituto Italiano di Studi Germanici'
+        site: 'https://www.studigermanici.it/'
+        img: 'img/partners/IISG/iisg_logo.png'
 
 
   - name: 'In collaboration with:'
@@ -46,7 +55,7 @@ cards:
     items:
       - title: 'National Research Council'
         site: 'https://www.cnr.it/en'
-        img: 'img/partners/CNR/logo_CNR_compatto.jpg'
+        img: 'img/partners/CNR/cnr_logo.png'
       - title: 'AREA Science Park'
         site: 'https://www.areasciencepark.it/en/'
         img: 'img/partners/AREA/OIP-840833661.jpg'
@@ -66,7 +75,7 @@ cards:
       #   img: 'img/partners/XFEL/European_XFEL_logo.svg.png'
       - title: 'National Interuniversity Consortium of Materials Science and Technology'
         site: 'https://www.instm.it/en/instm.aspx'
-        img: 'img/partners/INSTM/logo INSTM.png'
+        img: 'img/partners/INSTM/instm_logo.png'
       - title: 'RENTAL SUD'
         site: 'https://www.rentalsudnoleggi.com/'
         img: 'img/partners/RENTAL_SUD/VETTORIALE RENTALSUD_4.0_gv3.it_DEF1220.png'
