--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -1,27 +1,6 @@
 mail: gipe@ai-sf.it
 
 cards:
-  - name: 'Under the patronage of:'
-    size: 'small'
-    zoom: false
-    items:
-      - title: 'Comune di Trieste'
-        site: 'https://www.comune.trieste.it/'
-        img: 'img/patrocini/COMUNE_TRIESTE/LogoComuneTrieste.jpg'
-      - title: 'University of Trieste'
-        site: 'https://portale.units.it/en'
-        img: 'img/patrocini/UNITS/logo_units.png'
-      - title: 'National Research Council'
-        site: 'https://www.cnr.it/en'
-        img: 'img/partners/CNR/cnr_logo.png'
-      - title: 'Italian Physics Society'
-        site: 'https://en.sif.it/'
-        img: 'img/patrocini/SIF/sif_logo.png'
-      - title: 'Consolato Generale di Germania'
-        site:  'https://italien.diplo.de/it-it/vertretungen/generalkonsulat'
-        img: 'img/patrocini/consolato/LOGO_GK_ITA.jpg'
-
-
   - name: 'With the support of:'
     size: 'small'
     zoom: false
@@ -53,6 +32,11 @@ cards:
       - title: 'Institute of materials'
         site: 'https://www.cnr.it/en/institute/114'
         img: 'img/partners/IOM/IOM-logo.jpg'
+
+
+  - name: 'Sponsors:'
+    size: 'small'
+    items:
       - title: 'National Interuniversity Consortium of Materials Science and Technology'
         site: 'https://www.instm.it/en/instm.aspx'
         img: 'img/partners/INSTM/instm_logo.png'
@@ -76,10 +60,23 @@ cards:
         img: 'img/partners/FONDA/fonda_new.jpg'
 
 
-  # - name: 'Official sponsors:'
-  #   size: 'small'
-  #   items:
-  #     # - title: 'European XFEL'
-  #     #   site: 'https://www.xfel.eu/'
-  #     #   img: 'img/partners/XFEL/European_XFEL_logo.svg.png'
+  - name: 'Under the patronage of:'
+    size: 'small'
+    zoom: false
+    items:
+      - title: 'Comune di Trieste'
+        site: 'https://www.comune.trieste.it/'
+        img: 'img/patrocini/COMUNE_TRIESTE/LogoComuneTrieste.jpg'
+      - title: 'University of Trieste'
+        site: 'https://portale.units.it/en'
+        img: 'img/patrocini/UNITS/logo_units.png'
+      - title: 'National Research Council'
+        site: 'https://www.cnr.it/en'
+        img: 'img/partners/CNR/cnr_logo.png'
+      - title: 'Italian Physics Society'
+        site: 'https://en.sif.it/'
+        img: 'img/patrocini/SIF/sif_logo.png'
+      - title: 'Consolato Generale di Germania'
+        site:  'https://italien.diplo.de/it-it/vertretungen/generalkonsulat'
+        img: 'img/patrocini/consolato/LOGO_GK_ITA.jpg'
 
