aggiornamento data chiusura iscrizioni

--- a/_data/registration.yml
+++ b/_data/registration.yml
@@ -2,8 +2,8 @@ description:
   title: 'General information'
   paragraphs:
     - paragraph:
-        # - line: 'Registrations are yet to open. Stay tuned for updates!'
         - line: 'Registrations will be open from July 21<sup>st</sup> at 9:00, GTM+2.'
+        - line: 'Registrations are yet to open. Stay tuned for updates!'
         # - line: 'Registrations are closed.'
         # - line: "Registrations are yet to open. Stay tuned for updates!"
     - paragraph:
@@ -58,8 +58,8 @@ sections:
   - name: 'Deadlines'
     info: ''
     points:
-      - text: 'The round of registration opens on July 21<sup>st</sup> at 9:00, GTM+2' #and closes on August 10<sup>th</sup> at 23:59, GTM+1.'
-      # - text: 'Registrations are yet to open. Stay tuned for updates!'
+      - text: 'The round of registration opens on July 21<sup>st</sup> at 9:00, GTM+2 and closes on August 1<sup>st</sup> at 23:59, GTM+1.'
+      - text: 'Registrations are yet to open. Stay tuned for updates!'
       - text: 'Once the registration is closed, the organizing committee will select the participants follpwing the selection criteria presented above.'
       - text: 'Selected participants will be notified within a few days from the registration closing, then the event fee will have to be paid within 7 days to confirm the participation.'
       - text: 'Students non-accepted will be notified as well, and they will have the possibility to participate in case spots are still free after the first payment period.'
