--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -28,8 +28,8 @@ creator:
   - name: Denis Cristian Pal
     # mail: deniscristian.pal@studenti.units.it
     link: https://github.com/R3sten
-  - name: Giorgio Micaglio
-    link: https://github.com/giorgiomi
+  # - name: Giorgio Micaglio
+  #   link: https://github.com/giorgiomi
 
 images:
   - link: 'img/organizers/aisf_logo.png'
