--- a/_data/registration.yml
+++ b/_data/registration.yml
@@ -2,12 +2,12 @@ description:
   title: 'General information'
   paragraphs:
     - paragraph:
-        - line: 'Registrations will be open from July 21<sup>st</sup> at 9:00, GTM+2.'
-        - line: 'Registrations are yet to open. Stay tuned for updates!'
+        - line: 'Registrations will be open from July 21<sup>st</sup> at 9:00, GTM+2 to August 1<sup>st</sup> at 23:59, GTM+2.'
+        # - line: 'Registrations are yet to open. Stay tuned for updates!'
         # - line: 'Registrations are closed.'
         # - line: "Registrations are yet to open. Stay tuned for updates!"
+        - line: '<b>You can find the registration form at the bottom of this page.</b>'
     - paragraph:
-        # - line: 'You can find the registration form at the bottom of this page.'
         - line: 'Please read the terms and conditions below. Please note that, upon registration, you will be asked for personal details (such as name, surname, date of birth, university affiliation, etc.).'
 
 sections:
@@ -46,7 +46,7 @@ sections:
     info: 'Please read carefully and take note of the following:'
     points:
       - text: 'All personal data will be handled confidentially and in compliance with the European (GDPR EU 2016/679) and Italian (Art. 13 D. Lgs. 196/2003) data and privacy protection laws.'
-      - text: 'Only students enrolled in a university or similar institution on a physics or physics-related course, as well as up to twelve months after receiving a degree from a university are able to participate in this event. You confirm that you will be at least 18 years of age by July 28<sup>th</sup> 2025.'
+      - text: 'Only students enrolled in a university or similar institution on a physics or physics-related course, as well as up to twelve months after receiving a degree from a university are able to participate in this event. You confirm that you will be at least 18 years of age by July 21<sup>st</sup> 2025.'
       - text: 'You acknowledge and agree that the Organizing Committee, the Italian Association of Physics Students (AISF), the International Association of Physics Students (IAPS), and the hosts of the event have no responsibility whatsoever for injuries, losses, or damages of any kind that result from your participation at the German Italian Physics Exchange 2025.'
       - text: "You accept the IAPS Code of Conduct.<br> <a class='chip custom1 white-text' href='../files/IAPS_Code_of_Conduct.pdf' style='font-size: 14px; float: right; margin-top:0.5rem'> IAPS Code of Conduct </a>"
       - text: 'By participating in the event you agree to be filmed, photographed, and otherwise recorded during the conference and hereby expressly grant the organizing committee, AISF and IAPS the right to use your picture, movie, or any other form of media publication in contexts such as the internet, social media, brochures, posters, informative and advertising materials. You also confirm that the information contained in this application is true and correct.'
@@ -58,16 +58,16 @@ sections:
   - name: 'Deadlines'
     info: ''
     points:
-      - text: 'The round of registration opens on July 21<sup>st</sup> at 9:00, GTM+2 and closes on August 1<sup>st</sup> at 23:59, GTM+1.'
-      - text: 'Registrations are yet to open. Stay tuned for updates!'
+      - text: 'The round of registration opens on July 21<sup>st</sup> at 9:00, GTM+2 and closes on August 1<sup>st</sup> at 23:59, GTM+2.'
+      # - text: 'Registrations are yet to open. Stay tuned for updates!'
       - text: 'Once the registration is closed, the organizing committee will select the participants follpwing the selection criteria presented above.'
       - text: 'Selected participants will be notified within a few days from the registration closing, then the event fee will have to be paid within 7 days to confirm the participation.'
       - text: 'Students non-accepted will be notified as well, and they will have the possibility to participate in case spots are still free after the first payment period.'
-#   - name: 'Registration Form'
-#     info: ''
-#     points:
-#       - text: "<form><button style='background-color: #04AA6D; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;' formaction='https://bit.ly/applytiqit24' target='_blank'>Apply here</button></form>"
-#       - text: 'Registrations are closed.'
-#       - text: 'The registration form will be available on December 2<sup>nd</sup> at 21:00, GTM+1.'
-#       # - text: "Apply <a href='https://forms.gle/kb5f6G7NeM3g6hUd9'>here</a>"
-# button: 'Registration Form'
+  # - name: 'Registration Form'
+    # info: ''
+    # points:
+    #   # - text: "<form><button style='background-color: #04AA6D; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;' formaction='https://bit.ly/applytiqit24' target='_blank'>Apply here</button></form>"
+    #   # - text: 'Registrations are closed.'
+    #   # - text: 'The registration form will be available on July 21<sup>st</sup> at 9:00, GTM+2.'
+    #   # - text: "Apply <a href='https://forms.gle/yfJq3nnhumPWPksDA'>here</a>"
+button: Apply Here!
