sis fvg logo added

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -10,7 +10,7 @@ cards:
         img: 'img/partners/IAPS/iaps_new.png'
       - title: 'Physics Department of University of Trieste'
         site: 'https://df.units.it/en'
-        img: 'img/partners/DF/image002.png'
+        img: 'img/partners/DF/image001.jpg'
       - title: 'International Centre for Theoretical Physics'
         site: 'https://www.ictp.it/'
         img: 'img/partners/ICTP/ictp_logo.png'
@@ -29,10 +29,12 @@ cards:
       - title: 'Istituto Italiano di Studi Germanici'
         site: 'https://www.studigermanici.it/'
         img: 'img/partners/IISG/iisg_logo.png'
-      - title: 'Institute of materials'
+      - title: 'CNR - Institute of materials'
         site: 'https://www.cnr.it/en/institute/114'
         img: 'img/partners/IOM/IOM-logo.jpg'
-
+      - title: 'SiS FVG'
+        site: 'https://www.sisfvg.it/en/'
+        img: 'img/partners/SiS_FVG/logo_sis_fvg.png'
 
   - name: 'Sponsors:'
     size: 'small'
@@ -40,10 +42,12 @@ cards:
       - title: 'National Interuniversity Consortium of Materials Science and Technology'
         site: 'https://www.instm.it/en/instm.aspx'
         img: 'img/partners/INSTM/instm_logo.png'
+      - title: 'Elettra Sincrotrone Trieste'
+        site: 'https://www.elettra.eu/'
+        img: 'img/partners/ELETTRA/elettra.png'
       - title: 'RENTAL SUD'
         site: 'https://www.rentalsudnoleggi.com/'
         img: 'img/partners/RENTAL_SUD/VETTORIALE RENTALSUD_4.0_gv3.it_DEF1220.png'
-
 
   - name: 'In collaboration with:'
     size: 'small'
@@ -52,9 +56,6 @@ cards:
       - title: 'AREA Science Park'
         site: 'https://www.areasciencepark.it/en/'
         img: 'img/partners/AREA/OIP-840833661.jpg'
-      - title: 'Elettra Sincrotrone Trieste'
-        site: 'https://www.elettra.eu/'
-        img: 'img/partners/ELETTRA/elettra.png'
       - title: 'Collegio Universitario Luciano Fonda'
         site: 'https://www.collegiofonda.it/'
         img: 'img/partners/FONDA/fonda_new.jpg'
@@ -64,9 +65,6 @@ cards:
     size: 'small'
     zoom: false
     items:
-      - title: 'Comune di Trieste'
-        site: 'https://www.comune.trieste.it/'
-        img: 'img/patrocini/COMUNE_TRIESTE/LogoComuneTrieste.jpg'
       - title: 'University of Trieste'
         site: 'https://portale.units.it/en'
         img: 'img/patrocini/UNITS/logo_units.png'
@@ -76,6 +74,9 @@ cards:
       - title: 'Italian Physics Society'
         site: 'https://en.sif.it/'
         img: 'img/patrocini/SIF/sif_logo.png'
+      - title: 'Comune di Trieste'
+        site: 'https://www.comune.trieste.it/'
+        img: 'img/patrocini/COMUNE_TRIESTE/LogoComuneTrieste.jpg'
       - title: 'Consolato Generale di Germania'
         site:  'https://italien.diplo.de/it-it/vertretungen/generalkonsulat'
         img: 'img/patrocini/consolato/LOGO_GK_ITA.jpg'
