--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -50,6 +50,12 @@
   seminar_description:
     - This talk traces the extraordinary journey of quantum mechanics over the past century, from the earliest atomic models to the profound conceptual revolutions that reshaped our understanding of reality. Beginning with Dalton's atomic hypothesis and culminating in Schrödinger's wave mechanics, the presentation highlights the progressive realization that matter exhibits both particle and wave-like behaviors. It then explores the deep philosophical and physical implications of quantum theory, focusing on the Einstein-Podolsky-Rosen paradox and Bell's theorem, culminating in the experimental confirmation of quantum nonlocality. The final part of the talk addresses modern quantum technologies—including quantum computing, communication, and sensing—emphasizing how the fragility of quantum states is being harnessed for transformative technological applications. As we celebrate the International Year of Quantum in 2025, this retrospective not only honors a century of discovery but also looks ahead to a quantum-enabled future.
 
+- id: camilli
+  name: Dott. Francesco Camilli
+  photo: "/img/speakers/camilli/foto_FC_zoomed.jpeg"
+  bio:
+    - "Francesco Camilli is a postdoctoral research fellow at the Abdus Salam International Centre for Theoretical Physics (ICTP). He earned a joint PhD in Mathematics from the University of Bologna and in Physics from the École Normale Supérieure in Paris, under the supervision of Pierluigi Contucci and Marc Mézard. He was awarded the INdAM-UMI-SIMAI national prize for the best thesis in Applied Mathematics defended in an Italian institution. Prior to joining ICTP, he was a pre-doctoral visiting scientist at the Institute of Science and Technology Austria."
+    - "His research interests range from statistical mechanics of disordered systems, to learning theory, high-dimensional probability, and statistical inference. Camilli is also strongly committed to teaching and science communication. Together with P. Contucci, he co-authored the textbook Lezioni di Meccanica Elementare, e oltre, which is used in undergraduate courses in Mathematical Physics."
 
 - id: masai
   name: Dott. Pierluigi Masai
